# vulogov_vest_challenge

ansible/: deploy_app_server.yaml  download_app_db.yaml  hosts  kill_server.yaml  start_server.yaml  test_ssh.yaml
cloudformation/: cost-monitoring.yaml
data/: trade.db  trade1.csv  trade2.csv
doc/: vest-doc.typ
server/: Cargo.toml
server/src/: main.rs
server/src/cmd/: app_alarms.rs  app_blotter.rs  app_positions.rs  app_sql.rs  mod.rs  setloglevel.rs
sql/: alarms.sql  alarms_buy_sell.sql  create_table1.sql  create_table2.sql  trade.sql
terraform/: main.tf
