[package]
name = "app_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
jsonrpc-http-server = "15.0"
env_logger = "0.11.*"
log = "0.4.*"
lazy_static = "1.5.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", default-features = true }
nanoid = "0.4.0"
clap = { version = "4.5.*", features = ["derive"] }
